--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -8,16 +8,18 @@
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
 }
+
+
 .btn{
     font-size: 20px;
     font-weight: bold;
     color: white;
     background-color: #FD6E0A;
-    width: 150px;
-    height: 65px;
     border: none;
     border-radius: 10px;
     padding: 18px 35px;
+    cursor: pointer;
+    
     
 }
 /* main style */
@@ -33,6 +35,9 @@
 header{
     background-color:#FFF8F3;
     padding-top: 50px;
+    background:url(../images/developer.png),url(../images/header_bg.png), #FFF8F3;
+    background-repeat: no-repeat;
+    background-position: top left,bottom right;
 
 }
 nav{
@@ -56,3 +61,37 @@ nav .menu a {
     color:#474747 ;
 
 }
+#banner{
+    margin:45px 38px 0px 268px ;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+#banner .banner-content {
+    max-width: 400px;
+    max-width: 585px;
+}
+#banner .banner-content h2{
+    font-size: 45px;
+    color: #474747;
+    font-weight: 600;
+    margin-bottom: 5px;
+}
+#banner .banner-content h1{
+    font-size: 85px;
+    font-weight: bold;
+    color:#757575;
+    margin-bottom: 20px;
+}
+#banner .banner-content p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #757575;
+}
+#banner.banner-image {
+    max-width: 584px;
+    max-height: 676px;
+    vertical-align: middle;
+}
+
