first about section commit

--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -22,6 +22,22 @@
     
     
 }
+.section-heading{
+    max-width: 827px;
+    text-align: center;
+
+}
+.section-heading h2 {
+    font-size: 35px;
+    margin-bottom: 30px;
+
+}
+.section-heading p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    line-height:30px ;
+    color: #757575 ;
+}
 /* main style */
 .logo h2{
     font-size: 45px;
@@ -94,4 +110,26 @@ nav .menu a {
     max-height: 676px;
     vertical-align: middle;
 }
+#about{
+    padding-top: 130px;
+
+}
+#about .about-container {
+    max-width: 1140px;
+    width: 71%;
+    margin: 0 auto;
+    text-align: center;
+    background-color:#FFF8F3 ;
+    padding: 131px 155px;
+
+}
+#about .about-container .about-info{
+    display: flex;
+    justify-content: space-around;
+}
+#about .about-container .about-info p{
+    font-size: 20px;
+    color: #757575;
+}
+
 
