card section complite

--- a/styles/porfolio.css
+++ b/styles/porfolio.css
@@ -25,6 +25,7 @@
 .section-heading{
     max-width: 827px;
     text-align: center;
+    margin: 0 auto;
 
 }
 .section-heading h2 {
@@ -130,6 +131,42 @@ nav .menu a {
 #about .about-container .about-info p{
     font-size: 20px;
     color: #757575;
+}
+#skill {
+    padding-top: 130px;
+}#skill .skill-container {
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+
+}
+#skill .skill-container .skill-box {
+    display: flex;
+    gap: 24px;
+
+}
+#skill .skill-container .skill-box .skill-card {
+    padding: 30px;
+    max-width: 267px;
+    box-shadow: 0 6px 50px 0 #5c5c5c;
+
+}
+.skill-card img{
+    max-width: 44px;
+    margin-bottom: 30px;
+}
+.skill-card h3 {
+    font-size: 20px;
+    color: #181818;
+    margin-bottom: 20px;
+    
+}
+.skill-card p {
+    font-size: 16px;
+    line-height: 28px;
+    margin-bottom: 30px;
+    color: #757575;
+
 }
 
 
